use interface projection instead of dto projection